[package]
name = "rust-gql"
version = "0.1.0"
authors = ["Chance Eakin <chance.eakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  actix-web = "1.0.0"
  diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
  dotenv = "0.9.0"
  env_logger = "0.6"
  futures = "0.1"
  juniper = "0.13.1"
  serde = "1.0"
  serde_derive = "1.0"
  serde_json = "1.0"
  slog = "2.5.2"
  slog-async = "^2.3.0"
  slog-term = "^2.0.0"
